--- a/FurEver/Pages/Index.cshtml
+++ b/FurEver/Pages/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to FurEver!</h1>
+    <p>Ready to take the Dog Breed Quiz?</p>
+    <form method="get" asp-page="/DogQuiz">
+        <button type="submit" class="btn btn-primary">Start the Dog Quiz</button>
+    </form>
 </div>
