--- a/FurEver/Pages/DogQuiz.cshtml
+++ b/FurEver/Pages/DogQuiz.cshtml
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/quiz.css" />
 </head>
 <body>
     <div class="container">
