--- a/FurEver/Pages/DogQuiz.cshtml
+++ b/FurEver/Pages/DogQuiz.cshtml
@@ -19,6 +19,8 @@
         {
             <h2>Your Score: @Model.Score / @Model.TotalQuestions</h2>
             <a href="/DogQuiz" class="btn">Start Again</a>
+            <!-- Link to navigate back to the home page -->
+            <a href="/" class="btn">Back to Home</a> <!-- This is the link to the home page -->
         }
         else if (Model.QuizImageUrl != null)
         {
