--- a/FurEver/Pages/Index.cshtml
+++ b/FurEver/Pages/Index.cshtml
@@ -8,3 +8,8 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<a class="dogbreed" asp-area="" asp-page="/DogBreed">
+    
+    <div class="menu-item-label">View All Dogs</div>
+</a>
