--- a/FurEver/Pages/DogDetails.cshtml
+++ b/FurEver/Pages/DogDetails.cshtml
@@ -1,8 +1,27 @@
 ﻿@page "{breedName}"
 @model FurEver.Pages.DogDetailsModel
 @{
+
+    var generalInfo = Model.DogDetails?.General;
+    var images = Model.DogDetails?.Images;
+    var indoorImageUrl = images?.Small?.Indoors;
+    var outdoorImageUrl = images?.Large?.Outdoors;
+    var name = generalInfo?.Name;
+    var shortDescription = generalInfo?.ShortDescription;
+    var longDescription = generalInfo?.LongDescription;
+
+
 }
 
 
+@if (Model.DogDetails != null) {
+    <h1>Hi From @generalInfo.Name  </h1>
+    <img src=@indoorImageUrl alt="This is image of the dob breed  @generalInfo.Name" />
 
-<h1>Details for @Model.DogDetails?.ToString()</h1>
+    <h2>Here's More About me</h2>
+    <p>@longDescription</p>
+}
+else
+{
+    <h1> We don't have the infomration on the breed you are searching for yet! </h1>
+}
