Made three technical changes to the code for COde Review Assignment

--- a/FurEver/Pages/DogQuiz.cshtml
+++ b/FurEver/Pages/DogQuiz.cshtml
@@ -41,7 +41,9 @@
 
         @if (Model.AnswerResult != null)
         {
-            <p class="quiz-result">@Model.AnswerResult</p>
+            <p class="@((Model.AnswerResult.Contains("Oops!") ? "quiz-result-wrong" : "quiz-result"))">
+                @Model.AnswerResult
+            </p>
         }
     </div>
 </body>
