--- a/FurEver/Pages/ReviewPage.cshtml
+++ b/FurEver/Pages/ReviewPage.cshtml
@@ -10,7 +10,7 @@
     <form method="post">
         <div>
             <label for="Username">Name:</label>
-            <input type="text" id="Username" name="Username" required />
+        <input type="text" id="Username" name="Username" maxlength="30" required />
         </div>
         <div>
             <label for="DogBreed">Dog Breed:</label>
