Technical Change 3: add placeholder in story.

--- a/FurEver/Pages/ReviewPage.cshtml
+++ b/FurEver/Pages/ReviewPage.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div>
             <label for="Comments">Story:</label>
-            <textarea id="Comments" name="Comments" required></textarea>
+        <textarea id="Comments" name="Comments" placeholder="Tell us your story!" required></textarea>
         </div>
 
         <button type="submit">Submit</button>
