Completed Shop Page UI. Added naviagations in the navbar for all the pages. Added navigation from DogBreed Table to Breed Details Added Back Navigation from DogDetail to Breed Listing

--- a/FurEver/Pages/DogBreed.cshtml
+++ b/FurEver/Pages/DogBreed.cshtml
@@ -31,8 +31,8 @@ else
         <tbody>
             @foreach (var breed in Model.DogBreeds)
             {
-                <tr>
-                    <td>@breed.General.Name</td>
+                <tr >
+                    <td><a href="/DogDetails/@breed.General.Name">@breed.General.Name</a></td>
                     <td>@breed.General.Group</td>
                     <td>@breed.General.ShortDescription</td>
                     <td>@breed.General.Popularity</td>
