--- a/FurEver/Pages/DogDetails.cshtml
+++ b/FurEver/Pages/DogDetails.cshtml
@@ -49,6 +49,7 @@
 }
 
 <div class="container dog-details-container">
+    <a href ="/DogBreed" class="btn btn-secondary mb-3">View All Breeds</a>
     @if (Model.DogDetails != null)
     {
         <div class="breed-title text-center">
