--- a/FurEver/Pages/DogQuiz.cshtml
+++ b/FurEver/Pages/DogQuiz.cshtml
@@ -4,23 +4,14 @@
     ViewData["Title"] = "Dog Breed Quiz";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/quiz.css" />
-</head>
-<body>
+
     <div class="container">
         <h1>Dog Breed Quiz</h1>
         @if (Model.QuizFinished)
         {
             <h2>Your Score: @Model.Score / @Model.TotalQuestions</h2>
             <a href="/DogQuiz" class="btn">Start Again</a>
-            <!-- Link to navigate back to the home page -->
-            <a href="/" class="btn">Back to Home</a> <!-- This is the link to the home page -->
+            <a href="/" class="btn">Back to Home</a>
         }
         else if (Model.QuizImageUrl != null)
         {
@@ -44,5 +35,3 @@
             <p class="quiz-result">@Model.AnswerResult</p>
         }
     </div>
-</body>
-</html>
