--- a/FurEver/Pages/Shared/_Layout.cshtml
+++ b/FurEver/Pages/Shared/_Layout.cshtml
@@ -34,7 +34,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/ReviewPage">Share Your Pet Story</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/DogQuiz">Find Your Match</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/quizupdated">Find Your Match</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DogQuiz">Test your knowledge</a>
                         </li>
 
                     </ul>
