Issue fix for Breedname saving in Database

--- a/FurEver/Pages/ReviewPage.cshtml
+++ b/FurEver/Pages/ReviewPage.cshtml
@@ -13,8 +13,8 @@
             <input type="text" id="Username" name="Username" required />
         </div>
         <div>
-            <label for="DogBreed">Dog Breed:</label>
-            <select id="DogBreed" name="DogBreed" required>
+            <label for="DogBreedName">Dog Breed:</label>
+            <select id="DogBreedName" name="DogBreedName" required>
                 <option value="">--Select a Breed--</option>
                 @foreach (var breed in Model.DogBreeds)
                 {
