--- a/FurEver/Pages/quizupdated.cshtml
+++ b/FurEver/Pages/quizupdated.cshtml
@@ -43,8 +43,8 @@
                 <input type="number" id="training" name="TrainingDifficultyPreference" class="form-control" min="1" max="5" required />
             </div>
             <div class="col-md-6">
-                <label for="exercise" class="form-label">Exercise Commitment</label>
-                <input type="number" id="exercise" name="ExerciseCommitment" class="form-control" min="1" max="5" required />
+                <label for="exercise" class="form-label">Friendliness To Strangers</label>
+                <input type="number" id="exercise" name="FriendlinessToStrangers" class="form-control" min="1" max="5" required />
             </div>
             <div class="col-md-6">
                 <label for="lifespan" class="form-label">Lifespan Preference</label>
