--- a/FurEver/Pages/Index.cshtml
+++ b/FurEver/Pages/Index.cshtml
@@ -11,6 +11,7 @@
     <title>@ViewData["Title"] - FurEver</title>
     <link rel="stylesheet" href="/css/site.css" />
 </head>
+
 <div class="index-page">
     <!-- Main Heading -->
     <h1 class="main-heading">The best way to find your dream dog</h1>
@@ -26,8 +27,8 @@
     <!-- Buttons -->
     <div class="button-container">
         <a asp-page="/DogQuiz" class="btn btn-primary">Test your knowledge on dog breeds</a>
-        <a asp-page="/DogBreed" class="btn btn-secondary">All dogs</a>
-        <a asp-page="/quizupdated" class="btn btn-secondary">Take the quiz</a>
+        <a asp-page="/DogBreed" class="btn btn-primary">All dogs</a>
+        <a asp-page="/quizupdated" class="btn btn-primary">Take the quiz</a>
     </div>
 
     <!-- Example Dog Images -->
