--- a/FurEver/Pages/ReviewPage.cshtml
+++ b/FurEver/Pages/ReviewPage.cshtml
@@ -7,6 +7,7 @@
 
     <h2>Share your Story</h2>
 
+<div class="form-container">
     <form method="post">
         <div>
             <label for="Username">Name:</label>
@@ -34,3 +35,5 @@
     {
         <div class="alert">@Model.Message</div>
     }
+
+    </div>
