--- a/FurEver/Pages/Shared/_Layout.cshtml
+++ b/FurEver/Pages/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <img src="/images/Logo.png" alt="FurEver Logo" style="height:40px;">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">FurEver</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
