--- a/FurEver/wwwroot/css/ReviewPage.css
+++ b/FurEver/wwwroot/css/ReviewPage.css
@@ -3,16 +3,26 @@
     background-color: #f5f5f5;
     justify-content: center;
     padding: 20px;
+    margin: 0;
+    background-image: url('/images/paws.png');
 }
 
 h2 {
     text-align: center;
-    color: #333;
+    color: #003f88;
 }
 
-input[type="text"],
-select,
-textarea {
+.form-container {
+    max-width: 800px;
+    margin: 5vh auto;
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 20px 40px rgba(255, 145, 77, 0.4);
+ 
+}
+
+    input [type="text"], select, textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
@@ -28,7 +38,7 @@ textarea {
 button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #003f88;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -37,7 +47,7 @@ button[type="submit"] {
 }
 
     button[type="submit"]:hover {
-        background-color: #0056b3;
+        background-color: #ff914d;
     }
 
 .alert {
